# boids-sim-webgpu

./: Cargo.toml  README.md  compute_shader.wgsl  index.html  script.js  styles.css  visual_webgpu.js
pkg/: boids_sim.d.ts  boids_sim.js  boids_sim_bg.wasm  boids_sim_bg.wasm.d.ts  package.json
src/: lib.rs
