[package]
name = "boids-sim"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2"
glam = "0.30.3"


# Use getrandom with wasm_js feature for WASM compatibility
getrandom = { version = "0.2", features = ["js"] }

# Use fastrand instead of rand for simpler WASM compatibility
fastrand = "2.0"